# tp-lab-4

./: Automata.cpp  Automata.h  CMakeLists.txt  main.cpp  tests.cpp
